# belajar_django_modular

./: pyproject.toml
src/app_dashboard/: urls.py  views.py
src/app_dashboard/templates/app_dashboard/: beranda.html  status.html
src/app_landing/: urls.py  views.py
src/app_landing/templates/app_landing/: index.html
src/app_login/: urls.py
src/app_user_settings/: urls.py  views.py
src/app_user_settings/templates/app_user_settings/: user_settings.html
src/django_modular/: settings.py  urls.py
