[project]
name = "belajar_django_modular"
version = "0.1.0"
description = "Belajar django modular"
authors = [
    {name = "daffryn", email = "ariyanadaffa@gmail.com"},
]
dependencies = [
    "django>=5.0.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
startvenv = "source .venv/bin/activate"
dev = "pdm run src/manage.py runserver"


[tool.pdm]
distribution = true
